@@ -17,6 +17,15 @@ File: ccf.series.rwl.R
 - Added a "plus 1" option (floor.plus1) to location of first segment.
   Works together with parameter bin.floor. Default value is FALSE.
 
+File: corr.series.seg.R
+-----------------------
+
+- Fixed a bug where the requirement of fitting at least two segments
+  did not take into account overlapping segments (seg.lag), therefore
+  requiring more than the minimum number of years.
+- Added a "plus 1" option (floor.plus1) to location of first segment.
+  Works together with parameter bin.floor. Default value is FALSE.
+
 File: tbrm.c
 ------------
 
